<resources>
    <string name="app_name">Kidney Monitor</string>

    <string name="action_settings">Settings</string>

    <string name="caption_state">Device\nstate:</string>
    <string name="value_state_on">On</string>
    <string name="value_state_off">Off</string>
    <string name="value_state_unknown">Unknown</string>

    <string name="caption_status">Current\nstatus:</string>
    <string name="value_status_dialysis">Dialysis</string>
    <string name="value_status_filling">Filling</string>
    <string name="value_status_shutdown">Shutdown</string>
    <string name="value_status_disinfection">Disinfection</string>
    <string name="value_status_ready">Ready</string>
    <string name="value_status_flush">Flush</string>
    <string name="value_status_unknown">Unknown</string>

    <string name="value_sorbtime_hours"> h. </string>
    <string name="value_sorbtime_mins"> m.</string>

    <string name="caption_procedure_params">Procedure\nparameters:</string>
    <string name="value_procedure_params_normal">Normal</string>
    <string name="value_procedure_params_danger">Danger</string>
    <string name="value_procedure_params_unknown">Unknown</string>

    <string name="caption_device_functioning">Device\nfunctioning:</string>
    <string name="value_device_functioning_correct">Correct</string>
    <string name="value_device_functioning_fault">Fault</string>
    <string name="value_device_functioning_unknown">Unknown</string>

    <string name="caption_time_sorbent">Sorbents\nreplace in:</string>
    <string name="value_time_sorbent_unknown">Unknown</string>

    <string name="caption_battery_charge">Battery\ncharge:</string>
    <string name="value_battery_charge_unknown">Unknown</string>

    <string name="button_start">Stop</string>
    <string name="button_change_state">State</string>
    <string name="button_notification">Report</string>
    <string name="button_log">Log</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_pref">Preferences</string>

    <string name="hello_world">Hello world!</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="caption_current_device">Current device</string>
    <string name="value_current_device_none">No current device</string>
    <string name="value_current_device_default_address" translatable="false">00:00:00:00:00:00</string>
    <string name="title_prefs_saved">Preferences saved</string>
    <string name="title_prefs_loaded">Preferences loaded</string>
    <string name="title_prefs_cleared">Preferences cleared</string>
    <string name="title_prefs_new">Choose device to connect</string>
    <string name="title_activity_log">Log</string>
    <string name="title_clear_log">Clear log</string>
    <string name="title_set_defaults">Set defaults</string>
    <string name="title_service_start">Start service</string>
    <string name="title_service_stop">Stop service</string>
    <string name="error_connect_lost">Connection lost</string>
    <string name="error_connect_failed">Connection failed</string>
    <string name="title_log_autoscroll">Autoscroll</string>

    <string name="title_foreground_service">Foreground service</string>
    <string name="title_status_select">Select procedure</string>
    <string name="title_cancel">Cancel</string>
    <string name="last_connected">Last connected: </string>
    <string name="last_connected_unknown">Try to connect?</string>

    <string name="title_click_to_open">Click to open</string>

    <string name="title_choose_device">Choose device</string>
    <string name="title_service_options">Service options</string>
    <string name="title_notification_options">Notification options</string>
    <string name="title_vibration">Vibration</string>
    <string name="title_sound">Sound</string>

    <string name="title_test_mode">Test mode</string>

    <string name="title_filling_confirmation">Confirmation</string>
    <string name="filling_confirmation">Is patient connected?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="stop_confirmation">Stop procedure?</string>
    <string name="resume_confirmation">Resume procedure\u00A0</string>

    <string name="starting_filling">Starting to fill...</string>

    <string name="title_pause_procedure">Stop procedure</string>
    <string name="title_continue_procedure">Continue procedure</string>

    <string name="title_debug">Debug</string>

    <string name="instruction_shutdown">There we have an instruction, which appears\n
                                        when user selects "Shutdown" option.\n
                                        As you can see, we can make it in long strings\n
                                        and built-in images!\n
                                        Confirmation is provided by "OK" and "Cancel" buttons.
    </string>

    <string name="instruction_dialysis">There we have an instruction, which appears\n
                                        when user selects "Dialysis" option.\n
                                        As you can see, we can make it in long strings\n
                                        and built-in images!\n
                                        Confirmation is provided by "OK" and "Cancel" buttons.
    </string>

   <string name="instruction_disinfection">There we have an instruction, which appears\n
                                        when user selects "Disinfection" option.\n
                                        As you can see, we can make it in long strings\n
                                        and built-in images!\n
                                        Confirmation is provided by "OK" and "Cancel" buttons.
    </string>

    <string name="instruction_filling">There we have an instruction, which appears\n
                                        when user selects "Filling" option.\n
                                        As you can see, we can make it in long strings\n
                                        and built-in images!\n
                                        Confirmation is provided by "OK" and "Cancel" buttons.
    </string>

    <string name="instruction_flush">There we have an instruction, which appears\n
                                     when user selects "Flush" option.\n
                                     As you can see, we can make it in long strings\n
                                     and built-in images!\n
                                     Confirmation is provided by "OK" and "Cancel" buttons.
    </string>

    <string name="title_settings_ok">Device settings are OK</string>
    <string name="ok">OK</string>
    <string name="notif_restart">Restart needed to take effect</string>

    <string name="mlm">\ ml/min.</string>
    <string name="l">\ l</string>
    <string name="macm2">\ mA/cm2</string>
    <string name="mmHg">\ mm Hg</string>
    <string name="cells">Cells: </string>
    <string name="title_pump_flows">Pumps flows: ±20 ml/min</string>
    <string name="title_sensors_readings">Sensors readings: ±10 mm Hg</string>
    <string name="title_electrolyzer">Electrolyzer</string>
    <string name="title_autoconnect_options">Autoconnect</string>
    <string name="title_connect_auto">Connect automatically</string>

    <string-array name="status_selection">
        <item>Dialysis</item>
        <item>Filling</item>
        <item>Shutdown</item>
        <item>Disinfection</item>
        <item>Flush</item>
    </string-array>
    <string name="title_activity_params">Procedure parameters</string>

    <string name="peristaltic_pump">PP\u00A0</string>
    <string name="dialysis_pump_1">DP1\u00A0</string>
    <string name="dialysis_pump_2">DP2\u00A0</string>
    <string name="ultrafiltrate">UF\u00A0</string>
    <string name="peristaltic_pressure">PPr\u00A0</string>
    <string name="dialysis_pressure_1">DPPr1\u00A0</string>
    <string name="dialysis_pressure_2">DPPr2\u00A0</string>
    <string name="dialysis_temperature">DT\u00A0</string>
    <string name="dialysis_conductivity">DC\u00A0</string>
    <string name="units">\ units</string>

    <string name="connected_to">Connected to: </string>
    <string name="batt_set">Battery level is </string>
    <string name="starus_set">Current procedure: </string>
    <string name="params_set">Procedure parameters is: </string>
    <string name="funct_set">Device functioning: </string>

    <string name="error_press">Pressure abnormal at sensor #</string>
    <string name="error_temp">Temperature is abnormal</string>
    <string name="error_electro">Electrolyzer is abnormal</string>
    <string name="error_eds">Conductivity abnormal at sensor #</string>
    <string name="error_batt">Battery error</string>
    <string name="error_pump">Pump abnormal at sensor #</string>
    <string name="error_unknown">Unknown error occurred</string>

    <string name="user_switched_to">User switched to: </string>

</resources>
