<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearLayout1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/caption_current_device"
                        android:id="@+id/tv_CaptionCurrentDevice" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/value_current_device_none"
                        android:id="@+id/tv_ValueCurrentDeviceName"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/value_current_device_default_address"
                        android:id="@+id/tv_ValueCurrentDeviceAddress" />
                </LinearLayout>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/button_scan"
                    android:id="@+id/bt_Scan"
                    android:onClick="OnClick"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"/>
            </LinearLayout>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:id="@+id/space2"
                android:layout_below="@+id/LinearLayout1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/space2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_service_options"
                    android:id="@+id/textView40" />

                <Switch
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/title_foreground_service"
                    android:id="@+id/sw_ForegroundService"
                    android:checked="false"
                    android:onClick="OnClick" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp" />

                <Switch
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_connect_auto"
                    android:id="@+id/sw_Autoconnect"
                    android:checked="false"
                    android:onClick="OnClick" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_service_stop"
                    android:id="@+id/bt_StopService"
                    android:onClick="OnClick" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_notification_options"
                    android:id="@+id/textView45" />

                <Switch
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sound"
                    android:id="@+id/sw_Sound"
                    android:checked="false"
                    android:onClick="OnClick" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp" />

                <Switch
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_vibration"
                    android:id="@+id/sw_Vibration"
                    android:checked="false"
                    android:onClick="OnClick" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_test_mode"
                    android:id="@+id/textView46" />

                <Switch
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_test_mode"
                    android:id="@+id/sw_TestMode"
                    android:checked="false"
                    android:onClick="OnClick" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_set_defaults"
                    android:id="@+id/bt_SetDefaults"
                    android:onClick="OnClick" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>