
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/sample_main_layout"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/main_bg"
        android:scaleType="centerCrop"
        android:layout_alignTop="@+id/space_top"
        android:layout_alignLeft="@+id/space_top"
        android:layout_alignStart="@+id/space_top"
        android:layout_alignBottom="@+id/space_bottom"
        android:layout_alignRight="@+id/space_top"
        android:layout_alignEnd="@+id/space_top" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:id="@+id/space_top"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/tableLayout"
            android:layout_alignParentBottom="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/bt_Pause"
            android:layout_alignStart="@+id/bt_Pause"
            android:layout_alignRight="@+id/bt_Pause"
            android:layout_alignEnd="@+id/bt_Pause">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="5dp"
                    android:layout_height="25dp"
                    android:layout_column="0" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tr_StateRow"
                android:onClick="OnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/caption_state"
                    android:id="@+id/tv_CaptionState"
                    android:layout_column="1" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="5dp"
                    android:layout_column="2" />

                <ImageView

                    android:id="@+id/iv_State"
                    android:layout_column="3"
                    android:src="@drawable/ic_help"
                    android:onClick="OnClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/value_state_unknown"
                    android:id="@+id/tv_ValueState"
                    android:layout_column="4"
                    android:layout_marginTop="7dp"
                    android:onClick="OnClick" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_State2"
                    android:layout_column="5"
                    android:src="@drawable/ic_phonelink"
                    android:onClick="OnClick" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tr_StatusRow"
                android:onClick="OnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/caption_status"
                    android:id="@+id/tv_CaptionStatus"
                    android:layout_column="1"
                    android:onClick="OnClick" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/iv_Status"
                    android:layout_column="3"
                    android:src="@drawable/ic_help"
                    android:onClick="OnClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/value_status_unknown"
                    android:id="@+id/tv_ValueStatus"
                    android:layout_column="4"
                    android:onClick="OnClick"
                    android:layout_marginTop="7dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView7"
                    android:layout_column="5"
                    android:src="@drawable/chevron_down" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClick"
                android:id="@+id/tr_ParamsRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/caption_procedure_params"
                    android:id="@+id/tv_CaptionProcedureParams"
                    android:layout_column="1"
                    android:onClick="OnClick" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/iv_Params"
                    android:layout_column="3"
                    android:src="@drawable/ic_help"
                    android:onClick="OnClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/value_procedure_params_unknown"
                    android:id="@+id/tv_ValueProcedureParams"
                    android:layout_column="4"
                    android:onClick="OnClick"
                    android:layout_marginTop="7dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:layout_column="5"
                    android:src="@drawable/chevron_down" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/caption_device_functioning"
                    android:id="@+id/tv_CaptionDeviceFunctioning"
                    android:layout_column="1" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/iv_Functioning"
                    android:layout_column="3"
                    android:src="@drawable/ic_help" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/value_device_functioning_unknown"
                    android:id="@+id/tv_ValueDeviceFunctioning"
                    android:layout_column="4"
                    android:layout_marginTop="7dp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/caption_time_sorbent"
                    android:id="@+id/tv_CaptionSorbentTime"
                    android:layout_column="1" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="2dp"
                    android:layout_column="2" />

                <ImageView
                    android:id="@+id/iv_SorbentTime"
                    android:layout_column="3"
                    android:src="@drawable/ic_time_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/value_time_sorbent_unknown"
                    android:id="@+id/tv_ValueSorbentTime"
                    android:layout_column="4"
                    android:layout_marginTop="7dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_TimerReset"
                    android:layout_column="5"
                    android:src="@drawable/clock_reset"
                    android:onClick="OnClick" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="5dp"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/caption_battery_charge"
                    android:id="@+id/tv_CaptionBatteryCharge"
                    android:layout_column="1" />

                <ImageView
                    android:id="@+id/iv_Battery"
                    android:layout_column="3"
                    android:src="@drawable/ic_battery_unknown" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/value_battery_charge_unknown"
                    android:id="@+id/tv_ValueBatteryCharge"
                    android:layout_column="4"
                    android:layout_marginTop="7dp" />
            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:id="@+id/bt_Pause"
            android:onClick="OnClick"
            android:layout_below="@+id/tableLayout"
            android:background="@drawable/ic_paused_disabled" />

        <Button
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:id="@+id/bt_State"
            android:onClick="OnClick"
            android:layout_below="@+id/bt_Pause"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:background="@drawable/ic_bt_state" />

        <Space
            android:layout_width="5dp"
            android:layout_height="2dp"
            android:id="@+id/space" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_Notification"

            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_above="@+id/bt_Settings"
            android:layout_toRightOf="@+id/bt_State"
            android:layout_toEndOf="@+id/bt_State"
            android:background="@drawable/ic_bt_notif"
            android:layout_below="@+id/bt_Pause" />

        <Space
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:id="@+id/space5" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_Log"
            android:onClick="OnClick"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_bt_log"
            android:layout_alignBottom="@+id/bt_Settings"
            android:layout_alignTop="@+id/bt_Settings" />

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/bt_Settings"
            android:onClick="OnClick"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_below="@+id/bt_State"
            android:layout_alignLeft="@+id/bt_Notification"
            android:layout_alignStart="@+id/bt_Notification"
            android:background="@drawable/ic_bt_pref" />

    </RelativeLayout>

    <Space
        android:layout_width="50dp"
        android:layout_height="12dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout"
        android:id="@+id/space_bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/last_connected_unknown"
        android:id="@+id/tv_LastConnected"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />


</RelativeLayout>
